Bug fixes in DARK mode feature

--- a/views/chat.css
+++ b/views/chat.css
@@ -6,6 +6,20 @@
     font: 16px sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 1px;
+    border-radius: 10px;
+    /* Remove scrollbar space */
+    /* background: transparent; */
+    /* Optional: just make scrollbar invisible */
+}
+
+/* Optional: show position indicator in red */
+
+::-webkit-scrollbar-thumb {
+    background: #ffffff;
+}
+
 :focus {
     outline: 0;
 }
@@ -997,4 +1011,32 @@ input:checked+.slider:before {
 
 .slider.round:before {
     border-radius: 50%;
+}
+
+#chat_opts {
+    background: #ffffff;
+    min-height: 100px;
+    position: absolute;
+    left: 380px;
+    margin-top: 42px;
+    width: 150;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 9999;
+    transition: all 0.1s ease-in-out;
+}
+
+#chat_opts ul li {
+    padding: 10px;
+    padding-left: 20px;
+    margin-top: 5px;
+    list-style-type: none;
+    cursor: pointer;
+    transition: all 0.1s ease-in-out;
+}
+
+#chat_opts ul li:hover {
+    font-size: 17px;
+    background: #a9a9a9;
+    color: #000000;
 }
